# WindowsCpp

./: .gitignore  README.md
Adapters-Monitors/: README.md
Adapters-Monitors/Adapters-Monitors/: .clang-format  CMakeLists.txt  CMakeSettings.json
Adapters-Monitors/Adapters-Monitors/Source/: main.cpp
ClangOnWindows/: CMakeLists.txt  README.md  build-CMake.bat  build.bat
ClangOnWindows/Sources/: main.cpp
ComApp/: CMakeLists.txt
ComApp/ComApp/: CMakeLists.txt
ComApp/ComApp/Sources/: ComApp.cpp
ComApp/ComLibrary/: CMakeLists.txt
ComApp/ComLibrary/Sources/: Vehicles.cpp  Vehicles.hpp
ComApp/ComLibrary/Sources/Interfaces/: IVehicle.cpp  IVehicle.hpp
ComApp/ComLibrary/Sources/Utilities/: ComPtr.cpp  ComPtr.hpp  ComPtr.inl  UDLiterals.cpp  UDLiterals.hpp
ComApp/ComLibrary/Sources/Vehicles/: Airplane.cpp  Airplane.hpp  Automobile.cpp  Automobile.hpp  Drone.cpp  Drone.hpp  Glider.cpp  Glider.hpp
ComApp/ComLibrary/include/Vehicles/: Vehicles
DebugOutput_printf/Source/: DebugOutput_printf.cpp
DebugOutput_printf/workspaces/vs2015/: DebugOutput_printf.sln
DebugOutput_printf/workspaces/vs2015/DebugOutput_printf/: DebugOutput_printf.vcxproj  DebugOutput_printf.vcxproj.filters
XAudio2_DualEngine/Source/: PcmSound.cpp  PcmSound.h  XAudio2Context.cpp  XAudio2Context.h  XAudio2Engine.cpp  XAudio2Engine.h  XAudio2_DualEngine.cpp
XAudio2_DualEngine/workspaces/vs2015/: XAudio2_DualEngine.sln
XAudio2_DualEngine/workspaces/vs2015/XAudio2_DualEngine/: XAudio2_DualEngine.vcxproj  XAudio2_DualEngine.vcxproj.filters
