################################################################################
cmake_minimum_required (VERSION 3.10)
################################################################################

################################################################################
# Initialization
################################################################################
message ("CMAKE_VERSION is " ${CMAKE_VERSION})
################################################################################

################################################################################
# Project variables
################################################################################
set (ProjectName "Adapters-Monitors")
################################################################################

################################################################################
# Project
################################################################################
project (${ProjectName} VERSION 1.0)
################################################################################

################################################################################
# Libraries: Vulkan
################################################################################
################################################################################

################################################################################
# Targets: Vulcano
################################################################################
add_executable (${ProjectName}
  "Source/main.cpp"
)
# Target properties
set_target_properties (${ProjectName}
  PROPERTIES
    CXX_STANDARD 17
)
target_compile_options(${ProjectName}
  PRIVATE
    $<$<PLATFORM_ID:Windows>:/permissive->
)
target_compile_definitions (${ProjectName}
  PRIVATE
    $<$<PLATFORM_ID:Windows>:_UNICODE>
    $<$<PLATFORM_ID:Windows>:UNICODE>
    $<$<PLATFORM_ID:Windows>:WIN32_LEAN_AND_MEAN>
    $<$<PLATFORM_ID:Windows>:WINDOWS>
    $<$<PLATFORM_ID:Windows>:VK_USE_PLATFORM_WIN32_KHR>
)
################################################################################
